split init code into separate builder module

--- a/graphs/Makefile
+++ b/graphs/Makefile
@@ -1,10 +1,13 @@
 CC	= gcc
 CFLAGS	= -g -I$(MAINDIR) -std=c99 -Wall -D__USE_FIXED_PROTOTYPES__
 
-graphs: graphs.o
+graphs: graphs.o builder.o
 		$(CC) $(CFLAGS) -o $@ $^
 
-graphs.o: graphs.c graphs.h
+graphs.o: graphs.c graphs.h builder.h
+		$(CC) $(CFLAGS) -c -o $@ $<
+
+builder.o: builder.c builder.h graphs.h
 		$(CC) $(CFLAGS) -c -o $@ $<
 
 clean:
