--- a/graphs/Makefile
+++ b/graphs/Makefile
@@ -1,7 +1,7 @@
 CC	= gcc
 CFLAGS	= -g -I$(MAINDIR) -std=c99 -Wall -D__USE_FIXED_PROTOTYPES__
 
-graphs: graphs.o builder.o tour.o
+graphs: graphs.o builder.o tour.o heaps.o
 		$(CC) $(CFLAGS) -o $@ $^
 
 graphs.o: graphs.c graphs.h builder.h tour.h
@@ -11,6 +11,9 @@ builder.o: builder.c builder.h graphs.h
 		$(CC) $(CFLAGS) -c -o $@ $<
 
 tour.o: tour.c tour.h graphs.h
+		$(CC) $(CFLAGS) -c -o $@ $<
+
+heaps.o: heaps.c heaps.h graphs.h
 		$(CC) $(CFLAGS) -c -o $@ $<
 clean:
 	$(RM) graphs *.o *~
