--- a/graphs/Makefile
+++ b/graphs/Makefile
@@ -1,7 +1,7 @@
 CC	= gcc
 CFLAGS	= -g -I$(MAINDIR) -std=c99 -Wall -D__USE_FIXED_PROTOTYPES__
 
-graphs: graphs.o builder.o inspect.o heaps.o
+graphs: graphs.o builder.o inspect.o bheap.o
 		$(CC) $(CFLAGS) -o $@ $^
 
 graphs.o: graphs.c graphs.h builder.h inspect.h
@@ -10,10 +10,10 @@ graphs.o: graphs.c graphs.h builder.h inspect.h
 builder.o: builder.c builder.h graphs.h
 		$(CC) $(CFLAGS) -c -o $@ $<
 
-inspect.o: inspect.c inspect.h graphs.h heaps.h
+inspect.o: inspect.c inspect.h graphs.h bheap.h
 		$(CC) $(CFLAGS) -c -o $@ $<
 
-heaps.o: heaps.c heaps.h
+bheap.o: bheap.c bheap.h
 		$(CC) $(CFLAGS) -c -o $@ $<
 clean:
 	$(RM) graphs *.o *~
