--- a/graphs/Makefile
+++ b/graphs/Makefile
@@ -1,7 +1,7 @@
 CC	= gcc
-CFLAGS	= -g -I$(MAINDIR) -std=c99 -Wall -D__USE_FIXED_PROTOTYPES__
+CFLAGS	= -g -I. -std=c99 -Wall -D__USE_FIXED_PROTOTYPES__
 
-graphs: graphs.o builder.o inspect.o bheap.o generator.o
+graphs: graphs.o builder.o inspect.o bheap.o generator.o printer.o pcg_basic.o
 		$(CC) $(CFLAGS) -o $@ $^
 
 graphs.o: graphs.c graphs.h builder.h inspect.h utils.h
@@ -16,7 +16,14 @@ inspect.o: inspect.c inspect.h graphs.h bheap.h
 bheap.o: bheap.c bheap.h utils.h
 		$(CC) $(CFLAGS) -c -o $@ $<
 
-generator.o: generator.c generator.h utils.h
+printer.o: maps/printer.c maps/printer.h maps/generator.h utils.h
 		$(CC) $(CFLAGS) -c -o $@ $<
+
+generator.o: maps/generator.c maps/generator.h utils.h
+		$(CC) $(CFLAGS) -c -o $@ $<
+
+pcg_basic.o: pcg_basic.c pcg_basic.h
+		$(CC) $(CFLAGS) -c -o $@ $<
+
 clean:
 	$(RM) graphs *.o *~
